fixing label cutoff at 0%

--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -14,9 +14,10 @@
 
 .progress-bar {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
   color: $progress-bar-color;
+  text-align: center;
   background-color: $progress-bar-bg;
 }
 
